--- a/Components/Pages/Reportes/ReportePorGrupo.razor
+++ b/Components/Pages/Reportes/ReportePorGrupo.razor
@@ -1,11 +1,12 @@
 ﻿@page "/ReportePorGrupo/{Grado:int}/{Carrera:int}/{Grupo}"
 @inject CecytekContext Contexto
+@inject IJSRuntime JS
+@using ClosedXML.Excel
+
+
 
 
 <TituloPagina Titulo="@Titulo"></TituloPagina>
-
-
-
 
 @if (ListaAlumnos?.Count > 0)
 {
@@ -17,25 +18,23 @@
                 <th scope="col">Nombre del Alumno</th>
                 <th score="col">Estado</th>
                 <th scope="col">Grupo</th>
-                           </tr>
+            </tr>
         </thead>
         <tbody>
             @foreach (var Alumno in ListaAlumnos.Skip((currentPageNumber - 1) * itemsPerPage).Take(itemsPerPage))
             {
                 <tr>
-                    <!-- Muestra la posicion en la lista-->
                     <th scope="row">@(ListaAlumnos.IndexOf(Alumno) + 1)</th>
                     <th scope="row">@Alumno.nocontrol</th>
                     <td>@Alumno.nombrealumno</td>
                     <td>@Alumno.estado</td>
                     <td>@Alumno.grupo</td>
-                                 </tr>
+                </tr>
             }
         </tbody>
     </table>
 
     <div class="d-flex justify-content-center">
-        <!-- Agrega el componente de paginación -->
         <Pagination ActivePageNumber="@currentPageNumber"
                     TotalPages="totalPages"
                     PageChanged="onPageChangedAsync"
@@ -51,11 +50,8 @@ else
 }
 
 <div class="d-flex justify-content-center">
-    <button class="btn btn-primary m-3">Guardar PDF</button>
-    <button class="btn btn-primary m-3">Guardar Excel</button>
+    <button class="btn btn-primary m-3" @onclick="ExportarAExcel">Guardar Excel</button>
 </div>
-
-
 
 @code {
     [Inject] protected PreloadService PreloadService { get; set; }
@@ -63,10 +59,7 @@ else
     [Parameter] public int Carrera { get; set; }
     [Parameter] public string Grupo { get; set; }
     private string Titulo { get; set; }
-    private string SGrado { get; set; }
-    private string SCarrera { get; set; }
     private List<Alumnos> ListaAlumnos { get; set; }
-    private string Busqueda { get; set; }
     private int currentPageNumber = 1;
     private int itemsPerPage = 15; // Cantidad de registros por página
     int totalPages => (int)Math.Ceiling(ListaAlumnos.Count / (double)itemsPerPage);
@@ -78,15 +71,25 @@ else
         {
             await Task.Run(async () =>
             {
-                //Busca el nombre de la carrera
-                SCarrera = Contexto.Carreras.Where(x => x.idcarrera == Carrera).Select(x => x.nombrecarrera).FirstOrDefault();
-                //Construye el titulo "1° A Formacion Basica"
-                Titulo = SCarrera + " " + Grado + "° " + Grupo;
-                //Trae la lista de alumnos que pertenecen al grupo seleccionado organizados alfabeticamente
-                ListaAlumnos = ListaAlumnos = await Contexto.Alumnos
-                        .Where(x => ((int)x.grado) == Grado && x.idcarrera == Carrera && x.grupo == Grupo)
-                        .OrderBy(x => x.nombrealumno)
-                        .ToListAsync();
+                // Obtiene el título
+                Titulo = Contexto.Carreras
+                          .Where(x => x.idcarrera == Carrera)
+                          .Select(x => x.nombrecarrera + " " + Grado + "° " + Grupo)
+                          .FirstOrDefault();
+
+                // Obtiene los alumnos con recibos pendientes o sin recibos
+                ListaAlumnos = await Contexto.Alumnos
+                               .Where(alumno => ((int)alumno.grado) == Grado && alumno.idcarrera == Carrera && alumno.grupo == Grupo)
+                               .GroupJoin(Contexto.Recibos, alumno => alumno.nocontrol, recibo => recibo.nocontrol,
+                                  (alumno, recibos) => new { Alumno = alumno, Recibos = recibos })
+                               .SelectMany(
+                                    x => x.Recibos.DefaultIfEmpty(),
+                                    (x, recibo) => new { x.Alumno, Recibo = recibo })
+                               .Where(x => x.Recibo == null || x.Recibo.estado == EstadoRecibos.Pendiente)
+                               .Select(x => x.Alumno)
+                               .Distinct()
+                               .OrderBy(x => x.nombrealumno)
+                               .ToListAsync();
             });
         }
         catch (Exception ex)
@@ -98,11 +101,56 @@ else
             PreloadService.Hide();
         }
     }
-    
 
     private async Task onPageChangedAsync(int newPageNumber)
     {
         currentPageNumber = newPageNumber;
         StateHasChanged(); // Asegúrate de forzar la actualización de la interfaz de usuario
     }
+
+  
+
+
+    private async Task ExportarAExcel()
+    {
+        try
+        {
+            var exportFileName = "ReporteAlumnos.xlsx";
+            var memoryStream = new MemoryStream();
+
+            using (var workbook = new XLWorkbook())
+            {
+                var worksheet = workbook.Worksheets.Add("Alumnos");
+                var currentRow = 1;
+
+                // Agregar encabezados
+                worksheet.Cell(currentRow, 1).Value = "No.";
+                worksheet.Cell(currentRow, 2).Value = "No. Control";
+                worksheet.Cell(currentRow, 3).Value = "Nombre del Alumno";
+                worksheet.Cell(currentRow, 4).Value = "Estado";
+                worksheet.Cell(currentRow, 5).Value = "Grupo";
+
+                // Agregar datos de los alumnos
+                foreach (var alumno in ListaAlumnos)
+                {
+                    currentRow++;
+                    worksheet.Cell(currentRow, 1).Value = (currentRow - 1).ToString();
+                    worksheet.Cell(currentRow, 2).Value = alumno.nocontrol;
+                    worksheet.Cell(currentRow, 3).Value = alumno.nombrealumno;
+                    worksheet.Cell(currentRow, 4).Value = alumno.estado.ToString();
+                    worksheet.Cell(currentRow, 5).Value = alumno.grupo;
+                }
+
+                workbook.SaveAs(memoryStream);
+            }
+
+            await JS.InvokeVoidAsync("saveAsFile", exportFileName, Convert.ToBase64String(memoryStream.ToArray()));
+            
+        } catch (Exception ex)
+        {
+            await Application.Current.MainPage.DisplayAlert($"Error", "No se pudo exportar el archivo, error:" + ex.Message, "Ok");
+        }
+    }
+
+
 }
